I think I finished... on my keyboard.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,39 @@
     <div class="container">
         <header>Totally Trivial Game!</header>
         <div class="content">
-            <p class="time-remaining">Time Remaining: <span id="time-value">20</span> Seconds</p><br><br>
-            <p class="question"></p><br><br>
-            <div class="answers"></div>
+            <p class="time-remaining">Time Remaining: <span id="time-value">30</span> Seconds</p><br><br>
+            <p id="question">What is the color of Donald Duck's bowtie?</p><br>
+            <ol id="questions-1">
+                <li class="answer-1">Red</li>
+                <li class="answer-1">Green</li>
+                <li class="answer-1">Yellow</li>
+                <li class="answer-1">Blue</li>
+            </ol><br>
+            <p id="question">Which of these cities is the closest to London, UK?</p><br>
+            <ol id="questions-2">
+                <li class="answer-2">Atlanta, GA</li>
+                <li class="answer-2">Miama, FL</li>
+                <li class="answer-2">Boston, MA</li>
+                <li class="answer-2">New York, NY</li>
+            </ol><br>
+            <p id="question">Which of these countries was not a Soviet Republic in USSR?</p><br>
+            <ol id="questions-3">
+                <li class="answer-3">Kyrgyzstan</li>
+                <li class="answer-3">Serbia</li>
+                <li class="answer-3">Azerbaijan</li>
+                <li class="answer-3">Moldovo</li>
+            </ol><br>
+            <p id="question">What is the largest country, by area, that has only one time zone?</p><br>
+            <ol id="questions-4">
+                <li class="answer-4">Australia</li>
+                <li class="answer-4">Russia</li>
+                <li class="answer-4">Turkey</li>
+                <li class="answer-4">China</li>
+            </ol>
         </div>
+        <footer>
+            
+        </footer>
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
